--- a/about.html
+++ b/about.html
@@ -35,19 +35,19 @@
             title="Blog feed (Atom)"
         />
         
-		<link href="./_app/immutable/assets/0.B9bZB-hS.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.eCdsj1r4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CrukaeKp.js">
+		<link href="./_app/immutable/assets/0.DwPfpOdv.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B7YN4TTR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DoQ2O1cR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DmthGHIe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJze5qmA.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.67YIZLv4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CLp1gXW2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BczPc4Zd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/tV8Fnljd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Co4GkNEq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/5qfvcbkh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CL3oEfVs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BsOUpAhI.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.j2sANLlP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ChOChhef.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/pJ4098Nb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/2zvAppLV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CXUuUdFk.js">
@@ -76,21 +76,21 @@
             world around us, leaving a better trace for those who follow in our
             footsteps.</p> <p>Back in the day, I used to exercise and compete in orienteering at a
             high level, but these days, orienteering is more of exciting and
-            rewarding way to explore new forests and regions.</p></div> <h2 class="xs:text-2xl mb-8 pt-8 text-center text-lg font-black text-balance">One of my most exciting orienteering memories so far:</h2> <figure><picture><source srcset="/_app/immutable/assets/Tiomila2015.4dhvEfpM.avif 512w, /_app/immutable/assets/Tiomila2015.Diwgn_9n.avif 1024w" type="image/avif"/><source srcset="/_app/immutable/assets/Tiomila2015._rX-ZDzb.webp 512w, /_app/immutable/assets/Tiomila2015.DGtSG5CE.webp 1024w" type="image/webp"/><source srcset="/_app/immutable/assets/Tiomila2015.CHixOmxq.jpeg 512w, /_app/immutable/assets/Tiomila2015.Cd0LIhaz.jpeg 1024w" type="image/jpeg"/><img src="/_app/immutable/assets/Tiomila2015.Cd0LIhaz.jpeg" alt="Night time start of the Tiomila 2015 orienteering relay" class="mb-4 w-full max-w-5xl" width="1024" height="661"/></picture> <figcaption class="mx-auto max-w-prose">Seconds after the start of Tiomila 2015, one of the world's largest
+            rewarding way to explore new forests and regions.</p></div> <h2 class="xs:text-2xl mb-8 pt-8 text-center text-lg font-black text-balance">One of my most exciting orienteering memories so far:</h2> <figure><picture><source srcset="/_app/immutable/assets/Tiomila2015.C0MaNOmS.avif 1x, /_app/immutable/assets/Tiomila2015.Diob57o2.avif 2x" type="image/avif"/><source srcset="/_app/immutable/assets/Tiomila2015.Dhkz4RIW.webp 1x, /_app/immutable/assets/Tiomila2015.BEgMLDFX.webp 2x" type="image/webp"/><source srcset="/_app/immutable/assets/Tiomila2015.DNX1D5U_.jpg 1x, /_app/immutable/assets/Tiomila2015.Bx44NZN7.jpg 2x" type="image/jpeg"/><img src="/_app/immutable/assets/Tiomila2015.Bx44NZN7.jpg" alt="Night time start of the Tiomila 2015 orienteering relay" class="mb-4 w-full max-w-5xl" width="1024" height="661"/></picture> <figcaption class="mx-auto max-w-prose">Seconds after the start of Tiomila 2015, one of the world's largest
             orienteering relays. I ran the first leg and somehow got to the top
             5 as we left the arena, later finishing the course as <a href="https://10mila.se/index.php/sv/?option=com_tiomilaresults&amp;year=70&amp;class=8&amp;leg=1&amp;total=1" class="link compact"><!---->19th<!----></a><!----> of 318 runners. Best of all, photographer <a href="https://www.peterholgersson.se/" class="link compact"><!---->Peter Holgersson<!----></a><!----> captured this moment so beautifully.</figcaption></figure></div><!----><!----></div> <footer class="container mx-auto max-w-6xl px-4 pb-8 text-center"><hr class="border-yellow mx-auto my-16 max-w-sm"/> <h2 class="xs:text-2xl mb-6 text-xl leading-none font-black tracking-tight text-balance sm:text-3xl lg:text-4xl">Let's co-create a sustainable future!</h2> <a href="#" class="bg-moss inline-flex transform-gpu justify-center justify-self-center rounded-md px-8 py-3 font-black text-black shadow-lg duration-150 ease-out hover:scale-105 hover:shadow-xl "><span class="whitespace-nowrap">Email me</span></a><!----> <p class="mt-8">© 2015 - 2026 Samuel Plumppu</p> <div class="flex flex-wrap items-center justify-center space-x-8 dark:invert my-8"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-6"/></a> <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my libre software at GitHub"><img src="/images/github.svg" alt="GitHub" class="aspect-square h-6"/></a> <a href="https://fosstodon.org/@Greenheart" target="_blank" rel="me noopener noreferrer" aria-label="Follow me on Mastodon"><img src="/images/mastodon-logo.svg" alt="Mastodon" class="aspect-square h-6"/></a> <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="aspect-square h-6"/></a></div><!----> <p><span class="inline-flex flex-wrap items-center justify-center gap-1"><a href="/subscribe" class="link inline-flex items-center gap-1 compact"><img src="/images/feed.svg" alt="RSS/Atom feed icon" class="size-5"/>Subscribe<!----></a><!----> with your feed reader: <span class="inline-flex flex-nowrap items-center gap-0.5"><a href="/feed.atom" class="link self-center compact"><!---->Atom<!----></a><!---->/<a href="/feed.json" class="link self-center compact"><!---->JSON<!----></a><!----></span></span></p><!----></footer><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_16cdw4y = {
+					__sveltekit_5s9jbz = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.eCdsj1r4.js"),
-						import("./_app/immutable/entry/app.67YIZLv4.js")
+						import("./_app/immutable/entry/start.B7YN4TTR.js"),
+						import("./_app/immutable/entry/app.CLp1gXW2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
