--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             title="Blog feed (Atom)"
         />
         
-		<link href="./_app/immutable/assets/0.B9bZB-hS.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.eCdsj1r4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CrukaeKp.js">
+		<link href="./_app/immutable/assets/0.DwPfpOdv.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B7YN4TTR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DoQ2O1cR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DmthGHIe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DJze5qmA.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.67YIZLv4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CLp1gXW2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BczPc4Zd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/tV8Fnljd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Co4GkNEq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/5qfvcbkh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CL3oEfVs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BsOUpAhI.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.j2sANLlP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ChOChhef.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/pJ4098Nb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/2zvAppLV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CXUuUdFk.js">
@@ -55,8 +55,8 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/BGbMauXH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D7Pvki5j.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C1kzzhOH.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bq8KzyHH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BXGd-CGv.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D0V4NAxZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dgr0Sfp8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BBZ11N0l.js"><!--12qhfyh--><meta name="fediverse:creator" content="@Greenheart@fosstodon.org"/><!----><!--1i4ddgx--><!--[--><!--]--> <!--[--><meta name="robots" content="index,follow"/><!--]--> <!--[--><meta name="description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[--><link rel="canonical" href="http://sveltekit-prerender/"/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[--><!--[--><meta property="og:url" content="http://sveltekit-prerender/"/><!--]--> <!--[--><meta property="og:type" content="website"/> <!--[!--><!--[!--><!--[!--><!--[!--><!--]--><!--]--><!--]--><!--]--><!--]--> <!--[--><meta property="og:title" content="Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer"/><!--]--> <!--[--><meta property="og:description" content="Experienced fullstack developer, curious about how tech, systems thinking and Doughnut design for business can be combined to create a positive impact."/><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--><!----><title>Samuel Plumppu - Sustainability Entrepreneur &amp; Fullstack Developer</title>
     </head>
 
@@ -64,7 +64,7 @@
         class="bg-honeydew dark:bg-evergreen"
         data-sveltekit-preload-data="hover"
     >
-        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="xs:text-base 2xs:justify-between mx-auto flex max-w-6xl flex-1 flex-wrap justify-center gap-x-2 gap-y-4 p-4 text-sm svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" aria-label="Subscribe (Atom / JSON)" class="link flex"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="size-4" viewBox="0 0 24 24" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M4 11a9 9 0 0 1 9 9M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></g></svg><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--> <button title="Toggle theme from dark to light" aria-label="Toggle theme from dark to light" class="cursor-pointer"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="size-5" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10m0-1.5v-17a8.5 8.5 0 0 1 0 17"></path></svg></button><!----></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><picture><source srcset="/_app/immutable/assets/samuel.Cf_hJJQe.avif 250w, /_app/immutable/assets/samuel.CHEpg5ho.avif 500w" type="image/avif"/><source srcset="/_app/immutable/assets/samuel.Udd7UnQp.webp 250w, /_app/immutable/assets/samuel.CpQO6N3f.webp 500w" type="image/webp"/><source srcset="/_app/immutable/assets/samuel.DXEWl74u.png 250w, /_app/immutable/assets/samuel.BczuXn_4.png 500w" type="image/png"/><img src="/_app/immutable/assets/samuel.BczuXn_4.png" alt="Samuel Plumppu" class="shadow-yellow mx-auto my-8 size-32 rounded-full object-cover shadow-2xl sm:h-40 sm:w-40" fetchpriority="high" width="500" height="500"/></picture> <section class="grid justify-center text-center"><h1 class="xs:text-5xl mb-8 text-4xl leading-none font-black tracking-tight sm:text-6xl lg:text-7xl">Hey! I'm Samuel.</h1> <h2 class="mb-12 text-xl leading-6 font-black tracking-tight sm:text-3xl sm:leading-8 lg:text-4xl lg:leading-9"><div class="bg-moss -skew-y-1 transform p-2 text-black shadow-2xl"><span class="whitespace-nowrap">Sustainability Entrepreneur</span> &amp; <span class="whitespace-nowrap">Fullstack Developer</span></div></h2></section> <section class="mx-auto grid max-w-prose grid-cols-1 gap-4 text-xl sm:text-2xl"><p>Since 2015, I've worked with early stage startups and non-profits to
+        <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!----> <header class="xs:text-base 2xs:justify-between mx-auto flex max-w-6xl flex-1 flex-wrap justify-center gap-x-2 gap-y-4 p-4 text-sm svelte-12qhfyh"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="xs:space-x-4 flex space-x-2"><a href="/subscribe" title="Subscribe (Atom / JSON)" aria-label="Subscribe (Atom / JSON)" class="link flex"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="size-4" viewBox="0 0 24 24" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path d="M4 11a9 9 0 0 1 9 9M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></g></svg><!----></a><!----> <!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--> <button title="Toggle theme from dark to light" aria-label="Toggle theme from dark to light" class="cursor-pointer"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="size-5" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2S2 6.477 2 12s4.477 10 10 10m0-1.5v-17a8.5 8.5 0 0 1 0 17"></path></svg></button><!----></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><picture><source srcset="/_app/immutable/assets/samuel.5en14son.avif 1x, /_app/immutable/assets/samuel.szmNgS6Z.avif 2x" type="image/avif"/><source srcset="/_app/immutable/assets/samuel.CJ66ct_f.webp 1x, /_app/immutable/assets/samuel.C4EUq5fi.webp 2x" type="image/webp"/><source srcset="/_app/immutable/assets/samuel.DXEWl74u.png 1x, /_app/immutable/assets/samuel.BczuXn_4.png 2x" type="image/png"/><img src="/_app/immutable/assets/samuel.BczuXn_4.png" alt="Samuel Plumppu" class="shadow-yellow mx-auto my-8 size-32 rounded-full object-cover shadow-2xl sm:h-40 sm:w-40" fetchpriority="high" width="500" height="500"/></picture> <section class="grid justify-center text-center"><h1 class="xs:text-5xl mb-8 text-4xl leading-none font-black tracking-tight sm:text-6xl lg:text-7xl">Hey! I'm Samuel.</h1> <h2 class="mb-12 text-xl leading-6 font-black tracking-tight sm:text-3xl sm:leading-8 lg:text-4xl lg:leading-9"><div class="bg-moss -skew-y-1 transform p-2 text-black shadow-2xl"><span class="whitespace-nowrap">Sustainability Entrepreneur</span> &amp; <span class="whitespace-nowrap">Fullstack Developer</span></div></h2></section> <section class="mx-auto grid max-w-prose grid-cols-1 gap-4 text-xl sm:text-2xl"><p>Since 2015, I've worked with early stage startups and non-profits to
         create a future where both humanity and the living planet thrive
         together. I'm curious about how tech, systems thinking and <a href="https://doughnuteconomics.org/themes/business-enterprise" class="link compact"><!---->Doughnut design for business<!----></a><!----> can be combined to create a positive impact.</p> <p>With a strong passion for how libre software and co-operatives can help
         create an economy that is regenerative and distributive by design, I'm
@@ -105,15 +105,15 @@
 			
 			<script>
 				{
-					__sveltekit_16cdw4y = {
+					__sveltekit_5s9jbz = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.eCdsj1r4.js"),
-						import("./_app/immutable/entry/app.67YIZLv4.js")
+						import("./_app/immutable/entry/start.B7YN4TTR.js"),
+						import("./_app/immutable/entry/app.CLp1gXW2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
